2012-06-15  6.7.7-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Geomerty arguments accept multiple sign character for offsets
    EG: "-10-10", "-+10-+10", or "+-10+-10" generate negtive offsets
    while "+10+10", "++10++10", or "--10--10" generate positive offsets
    that is you can not only optionally have a sign in offset variable
    substitutions, but can negate that substitution if you so desire.

2012-06-12  6.7.7-8 Nicolas Robidoux <nicolas.robidoux@gmail...>
  * Refactor Catmull-Rom and Spline "interpolation" using
    state-of-the-art unpublished formulas
  * Fix incorrect transparency handling of "interpolative" cubic
    B-spline smoothing

2012-06-09  6.7.7-8 Cristy  <quetzlzacatenango@image...>
  * Initialize alpha channel when floodfill fill color is not opaque.
  * XYZ and Lab colorspace conversion tweaked (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21161).

2012-06-08  6.7.7-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-7, SVN revision 8219.

2012-06-06  6.7.7-7 Glenn Randers-Pehrson <glennrp@image...>
  * Disabled the new libpng-1.5.10 test for invalid palette index when
    reading a PNG or MNG (for speed), or when writing a MNG (because a
    zero-length PLTE is valid in a MNG when the global PLTE is used).
  * Display the PNG colortype as a string in "identify -verbose" output.

2012-06-06  6.7.7-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Small refactor of Average Interpolators (save some multiplies)
  * Added 'Spline' as a filter type as an alias to 'Cubic'. this brings both
    Catrom and Spline -filter and -interpolate methods in line.  Cubic should
    only be used when defining a general cubic using expert settings or
    when listed in "filter:verbose" debugging output.

2012-06-05  6.7.7-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-6, SVN revision 8164.

2012-06-05  6.7.7-6 Anthony Thyssen <A.Thyssen@griffith...>